Changed variable less steps and more comprensible

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -876,9 +876,8 @@
     name=nfwe_rand_wound
     id=nfwe_rand_wound_table
     first_time_only=no
-    {VARIABLE rand_wound_repeat yes}
     [while]
-        {VARIABLE_CONDITIONAL rand_wound_repeat equals yes}
+        {VARIABLE_CONDITIONAL rand_wound_selected not_equals yes}
         [do]
             {VARIABLE_OP rand_wound rand "1..100"}
             [switch]
@@ -896,7 +895,7 @@
                         [/have_location]
                         [then]
                             {NFW_concussion_WOUND}
-                            {VARIABLE rand_wound_repeat no}
+                            {VARIABLE rand_wound_selected yes}
                         [/then]
                     [/if]
                 [/case]
@@ -909,7 +908,7 @@
                         [/have_location]
                         [then]
                             {NFW_fear_of_desert_WOUND}
-                            {VARIABLE rand_wound_repeat no}
+                            {VARIABLE rand_wound_selected yes}
                         [/then]
                         [elseif]
                             [have_location]
@@ -918,7 +917,7 @@
                             [/have_location]
                             [then]
                                 {NFW_fear_of_plant_WOUND}
-                                {VARIABLE rand_wound_repeat no}
+                                {VARIABLE rand_wound_selected yes}
                             [/then]
                         [/elseif]
                         [elseif]
@@ -928,7 +927,7 @@
                             [/have_location]
                             [then]
                                 {NFW_fear_of_cave_WOUND}
-                                {VARIABLE rand_wound_repeat no}
+                                {VARIABLE rand_wound_selected yes}
                             [/then]
                         [/elseif]
                         [elseif]
@@ -938,7 +937,7 @@
                             [/have_location]
                             [then]
                                 {NFW_fear_of_hight_WOUND}
-                                {VARIABLE rand_wound_repeat no}
+                                {VARIABLE rand_wound_selected yes}
                             [/then]
                         [/elseif]
                         [elseif]
@@ -948,7 +947,7 @@
                             [/have_location]
                             [then]
                                 {NFW_fear_of_water_WOUND}
-                                {VARIABLE rand_wound_repeat no}
+                                {VARIABLE rand_wound_selected yes}
                             [/then]
                         [/elseif]
                         [elseif]
@@ -964,7 +963,7 @@
                             [/have_location]
                             [then]
                                 {NFW_fear_of_open_WOUND}
-                                {VARIABLE rand_wound_repeat no}
+                                {VARIABLE rand_wound_selected yes}
                             [/then]
                         [/elseif]
                     [/if]
@@ -986,7 +985,7 @@
                                 [/have_location]
                                 [else]
                                     {NFW_fear_of_water_WOUND}
-                                    {VARIABLE rand_wound_repeat no}
+                                    {VARIABLE rand_wound_selected yes}
                                 [/else]
                             [/if]
                         [/then]
@@ -997,7 +996,7 @@
                             [/have_location]
                             [then]
                                 {NFW_fear_of_desert_WOUND}
-                                {VARIABLE rand_wound_repeat no}
+                                {VARIABLE rand_wound_selected yes}
                             [/then]
                         [/elseif]
                         [elseif]
@@ -1007,7 +1006,7 @@
                             [/have_location]
                             [then]
                                 {NFW_fear_of_cave_WOUND}
-                                {VARIABLE rand_wound_repeat no}
+                                {VARIABLE rand_wound_selected yes}
                             [/then]
                         [/elseif]
                         [elseif]
@@ -1017,7 +1016,7 @@
                             [/have_location]
                             [then]
                                 {NFW_fear_of_plant_WOUND}
-                                {VARIABLE rand_wound_repeat no}
+                                {VARIABLE rand_wound_selected yes}
                             [/then]
                         [/elseif]
                         [elseif]
@@ -1027,7 +1026,7 @@
                             [/have_location]
                             [then]
                                 {NFW_fear_of_hight_WOUND}
-                                {VARIABLE rand_wound_repeat no}
+                                {VARIABLE rand_wound_selected yes}
                             [/then]
                         [/elseif]
                     [/if]
@@ -1057,7 +1056,7 @@
                                 [/have_location]
                                 [then]
                                     {NFW_fear_of_dark_WOUND}
-                                    {VARIABLE rand_wound_repeat no}
+                                    {VARIABLE rand_wound_selected yes}
                                 [/then]
                                 [elseif]
                                     [have_location]
@@ -1066,7 +1065,7 @@
                                     [/have_location]
                                     [then]
                                         {NFW_fear_of_light_WOUND}
-                                        {VARIABLE rand_wound_repeat no}
+                                        {VARIABLE rand_wound_selected yes}
                                     [/then]
                                 [/elseif]
                             [/if]
@@ -1085,7 +1084,7 @@
                         [/or]
                         [then]
                             {NFW_frostbite_WOUND}
-                            {VARIABLE rand_wound_repeat no}
+                            {VARIABLE rand_wound_selected yes}
                         [/then]
                     [/if]
                 [/case]
@@ -1112,7 +1111,7 @@
                         [/and]
                         [then]
                             {NFW_wild_magic_WOUND}
-                            {VARIABLE rand_wound_repeat no}
+                            {VARIABLE rand_wound_selected yes}
                         [/then]
                     [/if]
                 [/case]
@@ -1128,12 +1127,12 @@
                         [/or]
                         [then]
                             {NFW_burned_WOUND}
-                            {VARIABLE rand_wound_repeat no}
+                            {VARIABLE rand_wound_selected yes}
                         [/then]
                     [/if]
                 [/case]
                 [case]
-                    value=26
+                    value=26,27
                     [if]
                         [have_location]
                             {EVENT_UNIT}
@@ -1152,12 +1151,12 @@
                         [/or]
                         [else]
                             {NFW_broken_arm_WOUND}
-                            {VARIABLE rand_wound_repeat no}
+                            {VARIABLE rand_wound_selected yes}
                         [/else]
                     [/if]
                 [/case]
                 [case]
-                    value=27,28,29,30,31
+                    value=28,29,30,83,84
                     [if]
                         [have_location]
                             {EVENT_UNIT}
@@ -1184,12 +1183,12 @@
                         [/and]
                         [then]
                             {NFW_broken_wing_WOUND}
-                            {VARIABLE rand_wound_repeat no}
+                            {VARIABLE rand_wound_selected yes}
                         [/then]
                     [/if]
                 [/case]
                 [case]
-                    value=32
+                    value=31,32
                     [if]
                         [have_location]
                             {EVENT_UNIT}
@@ -1216,7 +1215,7 @@
                         [/or]
                         [else]
                             {NFW_broken_leg_WOUND}
-                            {VARIABLE rand_wound_repeat no}
+                            {VARIABLE rand_wound_selected yes}
                         [/else]
                     [/if]
                 [/case]
@@ -1227,7 +1226,7 @@
                         {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type not_equals undeadspirit}
                         [then]
                             {NFW_broken_rib_WOUND}
-                            {VARIABLE rand_wound_repeat no}
+                            {VARIABLE rand_wound_selected yes}
                         [/then]
                     [/if]
                 [/case]
@@ -1237,7 +1236,7 @@
                         {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type not_equals undeadspirit}
                         [then]
                             {NFW_broken_rib_WOUND}
-                            {VARIABLE rand_wound_repeat no}
+                            {VARIABLE rand_wound_selected yes}
                         [/then]
                     [/if]
                 [/case]
@@ -1247,7 +1246,7 @@
                         {VARIABLE_CONDITIONAL nfw_weapon_type equals blade}
                         [then]
                             {NFW_gash_WOUND}
-                            {VARIABLE rand_wound_repeat no}
+                            {VARIABLE rand_wound_selected yes}
                         [/then]
                     [/if]
                 [/case]
@@ -1276,7 +1275,7 @@
                         [/or]
                         [else]
                             {NFW_insane_WOUND}
-                            {VARIABLE rand_wound_repeat no}
+                            {VARIABLE rand_wound_selected yes}
                         [/else]
                     [/if]
                 [/case]
@@ -1299,7 +1298,7 @@
                         [/or]
                         [else]
                             {NFW_infection_WOUND}
-                            {VARIABLE rand_wound_repeat no}
+                            {VARIABLE rand_wound_selected yes}
                         [/else]
                     [/if]
                 [/case]
@@ -1314,7 +1313,7 @@
                         [/have_location]
                         [else]
                             {NFW_amnesia_WOUND}
-                            {VARIABLE rand_wound_repeat no}
+                            {VARIABLE rand_wound_selected yes}
                         [/else]
                     [/if]
                 [/case]
@@ -1331,7 +1330,7 @@
                         [else]
 #endif
                             {NFW_captured_WOUND}
-                            {VARIABLE rand_wound_repeat no}
+                            {VARIABLE rand_wound_selected yes}
 #ifdef CAMPAIGN_NORTHERN_REBIRTH
                         [/else]
                     [/if]
@@ -1340,7 +1339,7 @@
                 [case]
                     value=45
                     {NFW_Coward_WOUND}
-                    {VARIABLE rand_wound_repeat no}
+                    {VARIABLE rand_wound_selected yes}
                 [/case]
                 [case]
                     value=46,47,48
@@ -1353,14 +1352,14 @@
                         [/have_location]
                         [else]
                             {NFW_fear_of_weapon_WOUND}
-                            {VARIABLE rand_wound_repeat no}
+                            {VARIABLE rand_wound_selected yes}
                         [/else]
                     [/if]
                 [/case]
                 [case]
                     value=49,50
                     {NFW_maimed_WOUND}
-                    {VARIABLE rand_wound_repeat no}
+                    {VARIABLE rand_wound_selected yes}
                 [/case]
                 [case]
                     value=51
@@ -1373,12 +1372,12 @@
                         [/have_location]
                         [else]
                             {NFW_sick_WOUND}
-                            {VARIABLE rand_wound_repeat no}
+                            {VARIABLE rand_wound_selected yes}
                         [/else]
                     [/if]
                 [/case]
                 [case]
-                    value=52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84
+                    value=52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82
                     [if]
                         [have_location]
                             {EVENT_UNIT}
@@ -1398,7 +1397,7 @@
                         [/and]
                         [then]
                             {NFW_sick_WOUND}
-                            {VARIABLE rand_wound_repeat no}
+                            {VARIABLE rand_wound_selected yes}
                         [/then]
                         [elseif]
                             [have_location]
@@ -1419,7 +1418,7 @@
                             [/and]
                             [then]
                                 {NFW_infection_WOUND}
-                                {VARIABLE rand_wound_repeat no}
+                                {VARIABLE rand_wound_selected yes}
                             [/then]
                         [/elseif]
                     [/if]
@@ -1427,7 +1426,7 @@
                 [case]
                     value=85
                     {NFW_necrosis_WOUND}
-                    {VARIABLE rand_wound_repeat no}
+                    {VARIABLE rand_wound_selected yes}
                 [/case]
                 [case]
                     value=86,87,88,89,90,91,92
@@ -1440,7 +1439,7 @@
                         [/have_location]
                         [then]
                             {NFW_short_term_memory_loss_WOUND}
-                            {VARIABLE rand_wound_repeat no}
+                            {VARIABLE rand_wound_selected yes}
                         [/then]
                     [/if]
                 [/case]
@@ -1457,7 +1456,7 @@
                         [/have_location]
                         [then]
                             {NFW_fear_of_fog_WOUND}
-                            {VARIABLE rand_wound_repeat no}
+                            {VARIABLE rand_wound_selected yes}
                         [/then]
                     [/if]
                 [/case]
@@ -1472,12 +1471,12 @@
                         [/have_location]
                         [else]
                             {NFW_fear_of_type_WOUND}
-                            {VARIABLE rand_wound_repeat no}
+                            {VARIABLE rand_wound_selected yes}
                         [/else]
                     [/if]
                 [/case]
             [/switch]
         [/do]
     [/while]
-    {CLEAR_VARIABLE rand_wound_repeat}
+    {CLEAR_VARIABLE rand_wound_selected}
 [/event]
