Thera/Morvin disabled dead wound on final scenario

--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -21,11 +21,18 @@
     [/remove_event]
     [event]
         name=last_breath
-        id=nfw_disabled
+        id=nfw_disabled_scenario
         first_time_only=no
         [filter_condition]
             {VARIABLE_CONDITIONAL nfw_already_wound not_equals yes}
         [/filter_condition]
+#ifdef CAMPAIGN_NORTHERN_REBIRTH
+		[filter]
+			[not]
+				id=Sister Thera,Father Morvin
+			[/not]
+		[/filter]
+#endif
         [if]
             [have_location]
                 {EVENT_UNIT}
