Magical and Rocs from Era of Magic supported

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -272,7 +272,7 @@
                         [have_location]
                             {EVENT_UNIT}
                             [filter]
-                                race=undead
+                                race=undead,eoma_magical
                             [/filter]
                         [/have_location]
                     [/not]
@@ -291,15 +291,14 @@
             value=7
             [if]
                 {NFW_undead_ENABLED}
-                [and]
-                    {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type not_equals undeadspirit}
-                [/and]
+                {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type not_equals undeadspirit}
+				{VARIABLE_CONDITIONAL nfwe_unit_type.race not_equals eoma_magical}
                 [and]
                     [not]
                         [have_location]
                             {EVENT_UNIT}
                             [filter]
-                                trait=ghost_trait,undead
+                                trait=ghost_trait,undead,elemental
                             [/filter]
                         [/have_location]
                     [/not]
@@ -312,6 +311,7 @@
                     {NFW_undead_ENABLED}
                     [and]
                         {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type not_equals undeadspirit}
+						{VARIABLE_CONDITIONAL nfwe_unit_type.race not_equals eoma_magical}
                     [/and]
                     [and]
                         [not]
@@ -362,7 +362,7 @@
         [/not]
 #endif
         [not]
-            race=mechanical,undead
+            race=mechanical,undead,eoma_magical
         [/not]
         [not]
             trait=ghost_trait,undead,elemental,mechanical
@@ -449,7 +449,7 @@
                     [have_location]
                         {EVENT_UNIT}
                         [filter]
-                            race=bats,falcon,gryphon,bird
+                            race=bats,falcon,gryphon,bird,eoma_roc
                         [/filter]
                     [/have_location]
                 [/or]
@@ -691,7 +691,7 @@
                     [have_location]
                         {EVENT_UNIT}
                         [filter]
-                            race=bats,falcon,gryphon,bird
+                            race=bats,falcon,gryphon,bird,eoma_roc
                         [/filter]
                     [/have_location]
                     [then]
@@ -1137,7 +1137,7 @@
                         [have_location]
                             {EVENT_UNIT}
                             [filter]
-                                race=horse,monster,wolf,bats,falcon,gryphon,bird
+                                race=horse,monster,wolf,bats,falcon,gryphon,bird,eoma_roc,eoma_magical
                                 [or]
                                     type=SotA Soulless_Bat,SotA Flying Corpse_Bat
                                 [/or]
@@ -1161,7 +1161,7 @@
                         [have_location]
                             {EVENT_UNIT}
                             [filter]
-                                race=bats,falcon,gryphon,drake,bird
+                                race=bats,falcon,gryphon,drake,bird,eoma_roc
                                 [or]
                                     type=SotA Soulless_Bat,SotA Flying Corpse_Bat
                                 [/or]
@@ -1193,7 +1193,7 @@
                         [have_location]
                             {EVENT_UNIT}
                             [filter]
-                                race=bats,falcon,gryphon,naga,merman,bird
+                                race=bats,falcon,gryphon,naga,merman,bird,eoma_roc,eoma_magical
                                 [or]
                                     type=SotA Soulless_Bat,SotA Flying Corpse_Bat
                                 [/or]
@@ -1224,6 +1224,7 @@
                     [if]
                         {VARIABLE_CONDITIONAL nfw_weapon_type equals impact}
                         {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type not_equals undeadspirit}
+						{VARIABLE_CONDITIONAL nfwe_unit_type.race not_equals eoma_magical}
                         [then]
                             {NFW_broken_rib_WOUND}
                             {VARIABLE rand_wound_selected yes}
@@ -1234,6 +1235,7 @@
                     value=36
                     [if]
                         {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type not_equals undeadspirit}
+						{VARIABLE_CONDITIONAL nfwe_unit_type.race not_equals eoma_magical}
                         [then]
                             {NFW_broken_rib_WOUND}
                             {VARIABLE rand_wound_selected yes}
