Kamikaze units death more probable

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -342,6 +342,23 @@
                 [/else]
             [/if]
         [/case]
+        [case]
+            value=8,9,10,11,12,13,14
+            [if]
+				[have_location]
+					{EVENT_UNIT}
+					[filter]
+						[has_attack]
+							range=kamikaze
+						[/has_attack]
+					[/filter]
+				[/have_location]
+                [then]
+                    {NFW_dead_WOUND}
+                    {VARIABLE nfw_already_wound yes}
+                [/then]
+            [/if]
+        [/case]
     [/switch]
 [/event]
 
