Collar of Recall compatibility

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -647,6 +647,38 @@
 [/event]
 #endif
 
+# Collar of Recall properly works. No wound the first three times, and death the third time.
+
+#ifdef CAMPAIGN_TO_LANDS_UNKNOWN
+[event]
+    name=last_breath
+    id=nfw_collar_filter
+    first_time_only=no
+    [filter]
+        status=collar
+		[and]
+			status=thirdrecall
+		[/and]
+    [/filter]
+	{NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Disipated" {NFW_COLOR_RED}}
+	{VARIABLE nfw_already_wound yes}
+	{VARIABLE nfw_exclude_unit_id $unit.id}
+[/event]
+[event]
+    name=last_breath
+    id=nfw_collar_death
+    first_time_only=no
+    [filter]
+        status=collar
+		[not]
+			status=thirdrecall
+		[/not]
+    [/filter]
+	{NFW_dead_WOUND}
+	{VARIABLE nfw_already_wound yes}
+[/event]
+#endif
+
 # Disable the mod on scenarios with {IS_LAST_SCENARIO}, both because there's no further recalls and because the ending may change slightly depending on which units die in the final battle.
 # This can't check for next_scenario=null, as many campaigns have an epilogue scenario.
 # Reading wesnoth.sides[x].objectives might be possible, but that's only available as the translated string.
