Female units without female type name

--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -126,11 +126,26 @@
                 message= _ "Argh, I’m dying!"
                 female_message= _ "female^Argh, I’m dying!"
             [/message]
-            [message]
-                speaker=$unit.id
-                message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
-                female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was destroyed."
-            [/message]
+			[if]
+				[variable]
+					name=nfwe_unit_type.female.name
+					equals=$nfw_empty_var
+				[/variable]
+				[then]
+					[message]
+						speaker=$unit.id
+						message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
+						female_message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
+					[/message]
+				[/then]
+				[else]
+					[message]
+						speaker=$unit.id
+						message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
+						female_message= _ "$unit.name a $nfwe_unit_type.female.name was destroyed."
+					[/message]
+				[/else]
+			[/if]
         [/then]
         [elseif]
             [have_location]
@@ -151,11 +166,26 @@
                     message= _ "Argh, I’m dying!"
                     female_message= _ "female^Argh, I’m dying!"
                 [/message]
-                [message]
-                    speaker=$unit.id
-                    message= _ "$unit.name a $nfwe_unit_type.name was revived as undead."
-                    female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was revived as undead."
-                [/message]
+				[if]
+					[variable]
+						name=nfwe_unit_type.female.name
+						equals=$nfw_empty_var
+					[/variable]
+					[then]
+						[message]
+							speaker=$unit.id
+							message= _ "$unit.name a $nfwe_unit_type.name was revived as undead."
+							female_message= _ "$unit.name a $nfwe_unit_type.name was revived as undead."
+						[/message]
+					[/then]
+					[else]
+						[message]
+							speaker=$unit.id
+							message= _ "$unit.name a $nfwe_unit_type.name was revived as undead."
+							female_message= _ "$unit.name a $nfwe_unit_type.female.name was revived as undead."
+						[/message]
+					[/else]
+				[/if]
             [/then]
         [/elseif]
         [elseif]
@@ -171,11 +201,26 @@
                     message= _ "Argh, I’m dying!"
                     female_message= _ "female^Argh, I’m dying!"
                 [/message]
-                [message]
-                    speaker=$unit.id
-                    message= _ "$unit.name a $nfwe_unit_type.name returned as a ghost."
-                    female_message= _ "female^$unit.name a $nfwe_unit_type.female.name returned as a ghost."
-                [/message]
+				[if]
+					[variable]
+						name=nfwe_unit_type.female.name
+						equals=$nfw_empty_var
+					[/variable]
+					[then]
+						[message]
+							speaker=$unit.id
+							message= _ "$unit.name a $nfwe_unit_type.name returned as a ghost."
+							female_message= _ "$unit.name a $nfwe_unit_type.name returned as a ghost."
+						[/message]
+					[/then]
+					[else]
+						[message]
+							speaker=$unit.id
+							message= _ "$unit.name a $nfwe_unit_type.name returned as a ghost."
+							female_message= _ "$unit.name a $nfwe_unit_type.female.name returned as a ghost."
+						[/message]
+					[/else]
+				[/if]
             [/then]
         [/elseif]
         [elseif]
@@ -190,11 +235,26 @@
                     speaker=$unit.id
                     message= _ "Argh!"
                 [/message]
-                [message]
-                    speaker=$unit.id
-                    message= _ "$unit.name a $nfwe_unit_type.name was converted by the enemy."
-                    female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was converted by the enemy."
-                [/message]
+				[if]
+					[variable]
+						name=nfwe_unit_type.female.name
+						equals=$nfw_empty_var
+					[/variable]
+					[then]
+						[message]
+							speaker=$unit.id
+							message= _ "$unit.name a $nfwe_unit_type.name was converted by the enemy."
+							female_message= _ "$unit.name a $nfwe_unit_type.name was converted by the enemy."
+						[/message]
+					[/then]
+					[else]
+						[message]
+							speaker=$unit.id
+							message= _ "$unit.name a $nfwe_unit_type.name was converted by the enemy."
+							female_message= _ "$unit.name a $nfwe_unit_type.female.name was converted by the enemy."
+						[/message]
+					[/else]
+				[/if]
             [/then]
         [/elseif]
         [elseif]
@@ -225,11 +285,26 @@
                         [/message]
                     [/then]
                 [/if]
-                [message]
-                    speaker=$unit.id
-                    message= _ "$unit.name, a $nfwe_unit_type.name, was captured by the enemy. You will have to pay a ransom."
-                    female_message= _ "female^$unit.name, a $nfwe_unit_type.female.name, was captured by the enemy. You will have to pay a ransom."
-                [/message]
+				[if]
+					[variable]
+						name=nfwe_unit_type.female.name
+						equals=$nfw_empty_var
+					[/variable]
+					[then]
+						[message]
+							speaker=$unit.id
+							message= _ "$unit.name, a $nfwe_unit_type.name, was captured by the enemy. You will have to pay a ransom."
+							female_message= _ "$unit.name, a $nfwe_unit_type.name, was captured by the enemy. You will have to pay a ransom."
+						[/message]
+					[/then]
+					[else]
+						[message]
+							speaker=$unit.id
+							message= _ "$unit.name, a $nfwe_unit_type.name, was captured by the enemy. You will have to pay a ransom."
+							female_message= _ "$unit.name, a $nfwe_unit_type.female.name, was captured by the enemy. You will have to pay a ransom."
+						[/message]
+					[/else]
+				[/if]
             [/then]
         [/elseif]
         [elseif]
@@ -255,11 +330,26 @@
                         [/filter]
                     [/have_location]
                     [then]
-                        [message]
-                            speaker=$unit.id
-                            message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
-                            female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was destroyed."
-                        [/message]
+						[if]
+							[variable]
+								name=nfwe_unit_type.female.name
+								equals=$nfw_empty_var
+							[/variable]
+							[then]
+								[message]
+									speaker=$unit.id
+									message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
+									female_message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
+								[/message]
+							[/then]
+							[else]
+								[message]
+									speaker=$unit.id
+									message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
+									female_message= _ "$unit.name a $nfwe_unit_type.female.name was destroyed."
+								[/message]
+							[/else]
+						[/if]
                     [/then]
                 [/if]
             [/then]
